# ddgs-api

./: .dockerignore  .env.example  CLAUDE.md  Dockerfile  README.md  README_ZH.md  pyproject.toml
app/: auth.py  config.py  main.py  models.py
app/ddgs/: __init__.py  ddgs.py  executor.py  models.py
app/mcp/: __init__.py  auth.py  server.py  tools.py
app/routes/: models.py  search.py
