[project]
name = "ddgs-api"
version = "0.1.0"
description = ""
authors = [
    {name = "chendefine",email = "chendefine@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "ddgs (>=9.6.0,<10.0.0)",
    "fastapi[standard] (>=0.118.0,<0.119.0)",
    "pydantic-settings (>=2.0.0,<3.0.0)",
    "python-dotenv (>=1.0.0,<2.0.0)",
    "fastmcp (>=2.12.4,<3.0.0)"
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "ruff (>=0.13.3,<0.14.0)"
]

[tool.ruff]
line-length = 180
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "PT"]
ignore = ["S101"]  # assert allowed in tests
extend-ignore = ["E501","N802", "N818", "B008", "F403", "F405", "S324"]  # line too long handled by formatter, B008: FastAPI Body/Query in defaults

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
